methods.basics.Methods.scala.error
Erreur de compilation :
Methods:2: error: not found: value x
  x=0
  ^Methods:5: error: not found: value x
    x=x+1
    ^Methods:9: error: not found: value c
   c=0
   ^Methods:10: error: not found: value c
   while (c!=x) {
          ^Methods:10: error: not found: value x
   while (c!=x) {
             ^Methods:12: error: not found: value c
     c=c+1
     ^