methods.basics.Methods.scala.code
def goAndGet() {
  x=0
  while (!estSurBiscuit()) {
    avance();
    x=x+1
    if (estSurBiscuit()) {
      prendBiscuit();
    }
   c=0
   while (c!=x) {
     recule()
     c=c+1
   }
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}